--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,5 +6,11 @@ pipeline {
             echo 'Hello world'
               }
           }
+        stage('Stage 2'){
+            steps {
+                echo 'jenkins is good'
+                  }
+              }
+
       } 
 }
