--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+        triggers {
+          cron '* * * * *'
+    }        
     stages {
       stage('Stage 1'){
         steps {
